cluster/applications/utilities/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: utilities
  labels:
    app: whoami
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: whoami
