cluster/applications/utilities/whoami/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: utilities
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - whoami.cliff.li
    secretName: whoami-tls
  rules:
  - host: whoami.cliff.li
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whoami
            port:
              number: 80
